--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -152,6 +152,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CurrentRotGridSize=0
 CameraSpeed=5
+CurrentPosGridSize=3
 
 [MRU]
 MRUItem0=/Game/Level/Map_Main
@@ -172,7 +173,7 @@ K2Node_EnhancedInputAction=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonC
 CameraComponent=CameraComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 CapsuleComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Tide_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SceneComponent=
+SceneComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 K2Node_VariableGet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 PropertyWrapper=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 K2Node_VariableSet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
@@ -332,14 +333,14 @@ LastLevel=/Game/Level/Map_Main
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
@@ -434,7 +435,7 @@ MaterialExpressionParameter="\"Object\" "
 MaterialExpression="\"Object\" "
 BP_Star_C="\"Object\" "
 ChildActorComponent="\"Object\" "
-SphereComponent="\"Object\" "
+SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Image="\"Object\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
@@ -567,9 +568,11 @@ K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Actor/RoundTable/BP_Wander_Base_L.BP_Wander_Base_L
 OpenAssetsAtExit=/Game/Actor/RoundTable/BP_Wander_Base.BP_Wander_Base
+OpenAssetsAtExit=/Game/Actor/RoundTable/BP_Wander_Base_M.BP_Wander_Base_M
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2526,47 +2529,47 @@ BP_HollowTable_Base_M_C.Networking=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Actor/RoundTable/BP_Wander_Base
-MRUItem1=/Game/Actor/RoundTable/BP_Wander_Base_L
-MRUItem2=/Game/Curve/CF_Transverse_ExSlow
-MRUItem3=/Game/Curve/CF_Transverse1_Slow
-MRUItem4=/Game/Actor/BP_TweenSector_Base
-MRUItem5=/Game/Actor/BP_Hammer_Base
-MRUItem6=/Game/Actor/BP_Rover_Base
-MRUItem7=/Game/Actor/BP_Static
-MRUItem8=/Game/Actor/RoundTable/BP_WindMill_3way
-MRUItem9=/Game/Actor/RoundTable/BP_WindMill_Base
-MRUItem10=/Game/Actor/RoundTable/BP_RoundTable_Cross
-MRUItem11=/Game/Actor/RoundTable/BP_HollowTable_Base
-MRUItem12=/Game/Actor/BP_Seesaw_ObSwing
-MRUItem13=/Game/Actor/BP_Seesaw_Base
-MRUItem14=/Game/Curve/CF_Once/CF_SizeSmall
-MRUItem15=/Game/Curve/CF_Once/CF_SizeBorn
-MRUItem16=/Game/Actor/RoundTable/BP_Wander_Base_M
+MRUItem1=/Game/Actor/RoundTable/BP_Wander_Base_M
+MRUItem2=/Game/Actor/RoundTable/BP_Wander_Base_L
+MRUItem3=/Game/Curve/CF_Transverse_ExSlow
+MRUItem4=/Game/Curve/CF_Transverse1_Slow
+MRUItem5=/Game/Actor/BP_TweenSector_Base
+MRUItem6=/Game/Actor/BP_Hammer_Base
+MRUItem7=/Game/Actor/BP_Rover_Base
+MRUItem8=/Game/Actor/BP_Static
+MRUItem9=/Game/Actor/RoundTable/BP_WindMill_3way
+MRUItem10=/Game/Actor/RoundTable/BP_WindMill_Base
+MRUItem11=/Game/Actor/RoundTable/BP_RoundTable_Cross
+MRUItem12=/Game/Actor/RoundTable/BP_HollowTable_Base
+MRUItem13=/Game/Actor/BP_Seesaw_ObSwing
+MRUItem14=/Game/Actor/BP_Seesaw_Base
+MRUItem15=/Game/Curve/CF_Once/CF_SizeSmall
+MRUItem16=/Game/Curve/CF_Once/CF_SizeBorn
 MRUItem17=/Game/Actor/BP_WindMill_Base
 MRUItem18=/Game/Level/Map_Main
 MRUItem19=/Game/Level/1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Actor/BP_Seesaw_ObSwing.BP_Seesaw_ObSwing;
+RecentlyPlaced=/Game/Actor/Once/BP_Once_Base.BP_Once_Base;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross.BP_RoundTable_Cross;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_Wander_Base_L.BP_Wander_Base_L;
 RecentlyPlaced=/Game/Actor/BP_Star.BP_Star;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_Wander_Base.BP_Wander_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_Wander_Base_M.BP_Wander_Base_M;
+RecentlyPlaced=/Game/Actor/BP_Hammer_Base.BP_Hammer_Base;
+RecentlyPlaced=/Game/Actor/BP_Seesaw_Swing1.BP_Seesaw_Swing1;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring.BP_HollowTable_Ring;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_L.BP_HollowTable_Ring_L;
+RecentlyPlaced=/Game/Actor/BP_Seesaw_Base.BP_Seesaw_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base_M.BP_HollowTable_Base_M;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base.BP_HollowTable_Base;
 RecentlyPlaced=/Game/Actor/BP_TweenSector_Base.BP_TweenSector_Base;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_Wander_Base_L.BP_Wander_Base_L;
-RecentlyPlaced=/Game/Actor/BP_Hammer_Base.BP_Hammer_Base;
-RecentlyPlaced=/Game/Actor/Once/BP_Once_Base.BP_Once_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_M.BP_HollowTable_Ring_M;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_L.BP_HollowTable_Ring_L;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base;
 RecentlyPlaced=/Game/Actor/BP_Rover_Base.BP_Rover_Base;
-RecentlyPlaced=/Game/Actor/BP_Seesaw_Base.BP_Seesaw_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross_M.BP_RoundTable_Cross_M;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Base_M.BP_RoundTable_Base_M;
-RecentlyPlaced=/Game/Actor/BP_Static.BP_Static;
-RecentlyPlaced=/Game/Actor/BP_Seesaw_Swing1.BP_Seesaw_Swing1;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring.BP_HollowTable_Ring;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base_L.BP_HollowTable_Base_L;
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Meshes/SM_Cube.SM_Cube=1
@@ -2708,6 +2711,7 @@ RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base_L.BP_HollowTable_Base_
 /Game/Curve/CF_Transverse_ExSlow.CF_Transverse_ExSlow=1
 /Game/Curve/CF_Transverse_Slow.CF_Transverse_Slow=1
 /Game/Actor/BP_Hammer_Base.BP_Hammer_Base=1
+/Game/Actor/RoundTable/BP_Wander_Base_M.BP_Wander_Base_M=1
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -2787,7 +2791,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-1656.000 Y=98.000
+ScreenPosition=X=242.000 Y=115.000
 WindowSize=X=1280.000 Y=786.000
 InitiallyMaximized=True
 
